finished about us section

--- a/about.html
+++ b/about.html
@@ -148,8 +148,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Testimonials</h2>
-          <p>What are they saying</p>
+          <h2> Depoimentos</h2>
+          <p>O que eles dizem</p>
         </div>
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -158,12 +158,12 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                  <h3>Saul Goodman</h3>
-                  <h4>Ceo &amp; Founder</h4>
+                  <img src="assets/img/testimonials/mae sorrindo.jpeg" class="testimonial-img" alt="">
+                  <h3>Joana Oliveira</h3>
+                  <h4>Mãe de aluno</h4>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                    Estou muito satisfeito com o progresso da minha filha desde que ingressou no CDH. Os professores são extremamente dedicados e capacitados, e o ambiente acolhedor é evidente desde o primeiro dia.
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                 </div>
@@ -174,11 +174,11 @@
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                  <h3>Sara Wilsson</h3>
-                  <h4>Designer</h4>
+                  <h3>Sophia Santos</h3>
+                  <h4>Aluna</h4>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                    Frequentar o CDH tem sido uma experiência incrível para mim. As aulas são desafiadoras e inspiradoras, e sinto que estou crescendo como dançarina a cada semana. Mal posso esperar para continuar minha jornada aqui
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                 </div>
@@ -188,12 +188,12 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                  <h3>Jena Karlis</h3>
-                  <h4>Store Owner</h4>
+                  <img src="assets/img/testimonials/prof 4 sd.jpg" class="testimonial-img" alt="">
+                  <h3>Bruno Vieira</h3>
+                  <h4>Professor</h4>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                    Trabalhar no CDH tem sido uma experiência enriquecedora para mim. Estou constantemente impressionado com o talento e a dedicação dos alunos, e é gratificante poder ajudá-los a alcançar seus objetivos e explorar seu potencial.
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                 </div>
@@ -204,11 +204,11 @@
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                  <h3>Matt Brandon</h3>
-                  <h4>Freelancer</h4>
+                  <h3>João Fonseca</h3>
+                  <h4>Pai de aluno</h4>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                    O CDH superou todas as minhas expectativas. Meu filho adora suas aulas de frevo e está se destacando cada vez mais. É ótimo ver o quanto ele está se desenvolvendo como dançarino e como pessoa.
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                 </div>
@@ -218,12 +218,12 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
-                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                  <h3>John Larson</h3>
-                  <h4>Entrepreneur</h4>
+                  <img src="assets/img/testimonials/idosa.jpeg" class="testimonial-img" alt="">
+                  <h3>Maria de Lourdes</h3>
+                  <h4>Avó de aluno</h4>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                    O CDH é simplesmente maravilhoso! Minha neta ama suas aulas de ballet e sempre volta para casa radiante. Estou muito grata por ela ter a oportunidade de aprender e crescer em um ambiente tão positivo e acolhedor.
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                 </div>
