--- a/pricing.html
+++ b/pricing.html
@@ -87,14 +87,14 @@
               <h3>Ballet</h3>
               <h4><sup>$</sup>90<span> / mês</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li class="na">Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
+                <li>Aulas estruturadas por nível de habilidade</li>
+                <li>Instrutores qualificados e experientes</li>
+                <li>Instrutores qualificados e experientes</li>
+                <li>Instrutores qualificados e experientes</li>
+                <li>Ambiente inclusivo e encorajador</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Compre</a>
               </div>
             </div>
           </div>
@@ -102,16 +102,16 @@
           <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
             <div class="box featured">
               <h3>Jazz</h3>
-              <h4><sup>$</sup>19<span> / month</span></h4>
+              <h4><sup>$</sup>150<span> / mês</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
+                <li>Aulas dinâmicas com foco em ritmo e musicalidade</li>
+                <li>Exploração de diferentes estilos e técnicas de movimento</li>
+                <li>Desenvolvimento de improvisação e expressão pessoala</li>
+                <li>Coreografias contemporâneas e desafiantes</li>
+                <li>Atmosfera criativa e inspiradora</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Compre</a>
               </div>
             </div>
           </div>
@@ -119,16 +119,16 @@
           <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
             <div class="box">
               <h3>Frevo</h3>
-              <h4><sup>$</sup>29<span> / month</span></h4>
+              <h4><sup>$</sup>80<span> / mês</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
+                <li>Aprendizado da história e cultura do Frevo</li>
+                <li>Treinamento de passos tradicionais e coreografias modernas</li>
+                <li>Desenvolvimento de agilidade, coordenação e ritmo</li>
+                <li>Participação em apresentações em eventos culturais locais</li>
+                <li>Experiência divertida e enérgica de dança regional</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Compre</a>
               </div>
             </div>
           </div>
@@ -137,16 +137,16 @@
             <div class="box">
               <span class="advanced">Advanced</span>
               <h3>Street Dance</h3>
-              <h4><sup>$</sup>49<span> / month</span></h4>
+              <h4><sup>$</sup>80<span> / mês</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
+                <li>Exploração de diversos estilos, como hip-hop, breakdance e popping</li>
+                <li>Aulas focadas em movimentos urbanos e expressão pessoal</li>
+                <li>Coreografias contemporâneas e desafiantes</li>
+                <li>Desenvolvimento de habilidades de improvisação e freestyle</li>
+                <li>Comunidade inclusiva e apoio mútuo entre os dançarinos</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Compre</a>
               </div>
             </div>
           </div>
@@ -154,16 +154,16 @@
           <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
             <div class="box featured">
               <h3>Ginástica</h3>
-              <h4><sup>$</sup>19<span> / month</span></h4>
+              <h4><sup>$</sup>200<span> / mês</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
+                <li>Treinamento físico completo, incluindo flexibilidade, força e condicionamento</li>
+                <li>Aulas adaptadas para todas as idades e níveis de habilidade</li>
+                <li>Instrução individualizada e focada no progresso pessoal</li>
+                <li>Variedade de exercícios e modalidades, como aeróbica, alongamento e resistência</li>
+                <li>Promoção de hábitos saudáveis e bem-estar físico e mental</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Compre</a>
               </div>
             </div>
           </div>
@@ -171,16 +171,16 @@
           <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
             <div class="box">
               <h3>Dança contemporânea</h3>
-              <h4><sup>$</sup>29<span> / month</span></h4>
+              <h4><sup>$</sup>150<span> / mês</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
+                <li>Exploração de movimentos orgânicos e expressão corporal</li>
+                <li>Desenvolvimento de consciência espacial e uso do corpo como instrumento de arte</li>
+                <li>Experimentação com diferentes técnicas e estilos de dança</li>
+                <li>Coreografias inovadoras e colaborativas</li>
+                <li>Estímulo à criatividade e liberdade de expressão</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Compre</a>
               </div>
             </div>
           </div>
