finished events section

--- a/events.html
+++ b/events.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/dancarino.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -74,7 +74,7 @@
     <div class="breadcrumbs" data-aos="fade-in">
       <div class="container">
         <h2>Eventos</h2>
-        <p>Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit quaerat debitis. Rerum omnis ipsam aperiam consequatur laboriosam nemo harum praesentium. </p>
+        <p>Conheça aqui alguns de nossos espetáculos ao longo dos anos </p>
       </div>
     </div><!-- End Breadcrumbs -->
 
@@ -86,24 +86,25 @@
           <div class="col-md-6 d-flex align-items-stretch">
             <div class="card">
               <div class="card-img">
-                <img src="assets/img/events-1.jpg" alt="...">
+                <img src="assets/img/espetaculo 1.jpg" alt="...">
               </div>
               <div class="card-body">
-                <h5 class="card-title"><a href="">Introduction to webdesign</a></h5>
-                <p class="fst-italic text-center">Sunday, September 26th at 7:00 pm</p>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                <h5 class="card-title"><a href="">Espetáculo "Harmonia em Movimento"</a></h5>
+                <p class="fst-italic text-center">15 de julho, 19:30</p>
+                <p class="card-text">Uma jornada encantadora através da dança, onde movimento e música se fundem para contar histórias de paixão e expressão. Prepare-se para ser envolvido por performances emocionantes e coreografias cativantes que celebram a diversidade e a beleza da arte da dança.</p>
               </div>
             </div>
           </div>
           <div class="col-md-6 d-flex align-items-stretch">
             <div class="card">
               <div class="card-img">
-                <img src="assets/img/events-2.jpg" alt="...">
+                <img src="assets/img/espetaculo 2.jpg" alt="...">
               </div>
               <div class="card-body">
-                <h5 class="card-title"><a href="">Marketing Strategies</a></h5>
-                <p class="fst-italic text-center">Sunday, November 15th at 7:00 pm</p>
-                <p class="card-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo</p>
+                <h5 class="card-title"><a href="">Noite de Gala "Estrelas da Dança"</a></h5>
+                <p class="fst-italic text-center">22 de agosto, 20:00</p>
+                <p class="card-text">Uma noite de pura magia e talento, onde as estrelas da dança brilham intensamente no palco. Prepare-se para ser transportado para um mundo de elegância e virtuosismo, com performances deslumbrantes de ballet clássico, jazz vibrante e muito mais.
+                </p>
               </div>
             </div>
 
