--- a/404.html
+++ b/404.html
@@ -148,7 +148,7 @@
         <!-- 404 End -->
 
         <!-- Footer Start -->
-        <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container-fluid footer py-5 wow fadeIn d-none d-md-block" data-wow-delay="0.1s">
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-6 col-xl-3">
