change all navbar

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <a href="about.html" class="nav-item nav-link">Sobre</a>
                         <a href="event.html" class="nav-item nav-link">Events</a>
-                        <a href="blog.html" class="nav-item nav-link">Blogs</a>
+                        <a href="blog.html" class="nav-item nav-link">Blog</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Recursos</a>
                             <div class="dropdown-menu m-0">
                                 <a href="classes.html" class="dropdown-item">Modalidades</a>
                                 <a href="training.html" class="dropdown-item">Dance Training</a>
@@ -131,7 +131,7 @@
         <!-- Carousel End -->
 
         <!-- Banner Start -->
-        <div class="container-fluid bg-secondary wow zoomInDown" data-wow-delay="0.1s">
+        <div class="container-fluid bg-secondary wow zoomInDown d-none d-md-block" data-wow-delay="0.1s">
             <div class="container">
                 <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center text-center p-5">
                     <h1 class="me-4"><span class="fw-normal">Join us today for </span><span> your first dance</span></h1>
@@ -142,7 +142,7 @@
         <!-- Banner End -->
 
         <!-- About Start -->
-        <div class="container-fluid py-5">
+        <div class="container-fluid py-5 d-none d-md-block">
             <div class="container py-5">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-5 wow fadeInLeft" data-wow-delay="0.1s">
@@ -166,7 +166,7 @@
 
 
         <!-- Counter Facts Start -->
-        <div class="container-fluid counter-facts py-5">
+        <div class="container-fluid counter-facts py-5 d-none d-md-block">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
@@ -220,7 +220,7 @@
 
 
         <!-- Training Start -->
-        <div class="container-fluid training py-5">
+        <div class="container-fluid training py-5 d-none d-md-block">
             <div class="container py-5">
                 <div class="pb-5">
                     <div class="row g-4 align-items-end">
@@ -296,7 +296,7 @@
 
 
         <!-- Dance Class Start -->
-        <div class="container-fluid class bg-light py-5">
+        <div class="container-fluid class bg-light py-5 d-none d-md-block">
             <div class="container py-5">
                 <div class="pb-5">
                     <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Our Dance Classes</h4>
@@ -360,7 +360,7 @@
 
 
         <!-- Events Start -->
-        <div class="container-fluid events py-5">
+        <div class="container-fluid events py-5 d-none d-md-block">
             <div class="container py-5">
                 <div class="pb-5">
                     <div class="row g-4 align-items-end">
@@ -450,7 +450,7 @@
 
 
         <!-- Blogs Start -->
-        <div class="container-fluid blog pb-5">
+        <div class="container-fluid blog pb-5 d-none d-md-block">
             <div class="container pb-5">
                 <div class="pb-5">
                     <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Blog & News</h4>
@@ -520,7 +520,7 @@
 
 
         <!-- Team Start -->
-        <div class="container-fluid team pb-5">
+        <div class="container-fluid team pb-5 d-none d-md-block">
             <div class="container pb-5">
                 <div class="pb-5">
                     <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Dance Teachers</h4>
@@ -608,7 +608,7 @@
         <!-- Team End -->
 
         <!-- Video Gallery Start -->
-        <div class="container-fluid gallery pb-5">
+        <div class="container-fluid gallery pb-5 d-none d-md-block">
             <div class="container pb-5">
                 <div class="pb-5">
                     <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Dance Gallery</h4>
@@ -1090,7 +1090,7 @@
         <!-- Video Gallery End -->
 
         <!-- Testimonial Start -->
-        <div class="container-fluid testimonial pb-5">
+        <div class="container-fluid testimonial pb-5 d-none d-md-block">
             <div class="container pb-5">
                 <div class="pb-5">
                     <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">OUR CLIENTS RIVIEWS</h4>
@@ -1235,7 +1235,7 @@
 
         
         <!-- Copyright Start -->
-        <div class="container-fluid copyright py-4">
+        <div class="container-fluid copyright py-4 d-none d-md-block">
             <div class="container">
                 <div class="row g-4 align-items-center">
                     <div class="col-md-6 text-center text-md-start mb-md-0">
