--- a/classes.html
+++ b/classes.html
@@ -57,21 +57,21 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="event.html" class="nav-item nav-link">Events</a>
-                        <a href="blog.html" class="nav-item nav-link">Blogs</a>
+                        <a href="about.html" class="nav-item nav-link">Sobre</a>
+                        <a href="event.html" class="nav-item nav-link">Eventos</a>
+                        <a href="blog.html" class="nav-item nav-link">Blog</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Recursos</a>
                             <div class="dropdown-menu m-0">
-                                <a href="classes.html" class="dropdown-item active">Our classes</a>
+                                <a href="classes.html" class="dropdown-item active">Modalidades</a>
                                 <a href="training.html" class="dropdown-item">Dance Training</a>
-                                <a href="team.html" class="dropdown-item">Our Team</a>
+                                <a href="team.html" class="dropdown-item">Professores</a>
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                <a href="gallery.html" class="dropdown-item">Dance Gallery</a>
+                                <a href="gallery.html" class="dropdown-item">Galeria</a>
                                 <a href="404.html" class="dropdown-item">404 Page</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+                        <a href="contact.html" class="nav-item nav-link">Contato</a>
                     </div>
                     <a href="#" class="btn btn-primary rounded-pill text-white py-2 px-4 flex-wrap flex-sm-shrink-0">Register Now</a>
                 </div>
@@ -82,7 +82,7 @@
         <!-- Header Start -->
         <div class="container-fluid bg-breadcrumb">
             <div class="container text-center py-5" style="max-width: 900px;">
-                <h3 class="text-primary display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">Our Classes</h1>
+                <h3 class="text-primary display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">Modalidades</h1>
                 <ol class="breadcrumb justify-content-center text-white mb-0 wow fadeInDown" data-wow-delay="0.3s">
                     <li class="breadcrumb-item"><a href="index.html" class="text-dark">Home</a></li>
                     <li class="breadcrumb-item"><a href="#" class="text-dark">Pages</a></li>
@@ -93,7 +93,7 @@
         <!-- Header End -->
 
         <!-- Banner Start -->
-        <div class="container-fluid bg-secondary wow zoomInDown" data-wow-delay="0.1s">
+        <div class="container-fluid bg-secondary wow zoomInDown d-none d-md-block" data-wow-delay="0.1s">
             <div class="container">
                 <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center text-center p-5">
                     <h1 class="me-4"><span class="fw-normal">Join us today for </span><span> your first dance</span></h1>
@@ -244,7 +244,7 @@
 
 
         <!-- Video Gallery Start -->
-        <div class="container-fluid gallery pb-5">
+        <div class="container-fluid gallery pb-5 d-none d-md-block">
             <div class="container pb-5">
                 <div class="pb-5">
                     <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Dance Gallery</h4>
@@ -732,7 +732,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <div class="footer-item">
-                                <h4 class="text-white mb-4">JustDanc</h4>
+                                <h4 class="text-white mb-4">JustDance</h4>
                                 <p class="text-white mb-3">Dolor amet sit justo amet elitr clita ipsum elitr est.Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit.</p>
                                 <div class="d-flex">
                                     <a class="btn btn-lg-square btn-primary rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
@@ -801,7 +801,7 @@
         
         
         <!-- Copyright Start -->
-        <div class="container-fluid copyright py-4">
+        <div class="container-fluid copyright py-4 d-none d-md-block">
             <div class="container">
                 <div class="row g-4 align-items-center">
                     <div class="col-md-6 text-center text-md-start mb-md-0">
