--- a/event.html
+++ b/event.html
@@ -35,7 +35,7 @@
         <!-- Spinner Start -->
         <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
-                <span class="sr-only">Loading...</span>
+                <span class="sr-only">Carregando...</span>
             </div>
         </div>
         <!-- Spinner End -->
@@ -57,21 +57,21 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="event.html" class="nav-item nav-link active">Events</a>
-                        <a href="blog.html" class="nav-item nav-link">Blogs</a>
+                        <a href="about.html" class="nav-item nav-link">Sobre</a>
+                        <a href="event.html" class="nav-item nav-link active">Eventos</a>
+                        <a href="blog.html" class="nav-item nav-link">Blog</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Recursos</a>
                             <div class="dropdown-menu m-0">
-                                <a href="classes.html" class="dropdown-item">Our classes</a>
+                                <a href="classes.html" class="dropdown-item">Modalidades</a>
                                 <a href="training.html" class="dropdown-item">Dance Training</a>
-                                <a href="team.html" class="dropdown-item">Our Team</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                <a href="gallery.html" class="dropdown-item">Dance Gallery</a>
+                                <a href="team.html" class="dropdown-item">Professores</a>
+                                <a href="testimonial.html" class="dropdown-item">Depoimentos</a>
+                                <a href="gallery.html" class="dropdown-item">Galeria</a>
                                 <a href="404.html" class="dropdown-item">404 Page</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+                        <a href="contact.html" class="nav-item nav-link">Contato</a>
                     </div>
                     <a href="#" class="btn btn-primary rounded-pill text-white py-2 px-4 flex-wrap flex-sm-shrink-0">Register Now</a>
                 </div>
