--- a/testimonial.html
+++ b/testimonial.html
@@ -57,21 +57,21 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="event.html" class="nav-item nav-link">Events</a>
-                        <a href="blog.html" class="nav-item nav-link">Blogs</a>
+                        <a href="about.html" class="nav-item nav-link">Sobre</a>
+                        <a href="event.html" class="nav-item nav-link">Eventos</a>
+                        <a href="blog.html" class="nav-item nav-link">Blog</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Recursos</a>
                             <div class="dropdown-menu m-0">
-                                <a href="classes.html" class="dropdown-item">Our classes</a>
+                                <a href="classes.html" class="dropdown-item">Modalidades</a>
                                 <a href="training.html" class="dropdown-item">Dance Training</a>
-                                <a href="team.html" class="dropdown-item">Our Team</a>
-                                <a href="testimonial.html" class="dropdown-item active">Testimonial</a>
-                                <a href="gallery.html" class="dropdown-item">Dance Gallery</a>
+                                <a href="team.html" class="dropdown-item">Professores</a>
+                                <a href="testimonial.html" class="dropdown-item active">Depoimentos</a>
+                                <a href="gallery.html" class="dropdown-item">Galeria</a>
                                 <a href="404.html" class="dropdown-item">404 Page</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+                        <a href="contact.html" class="nav-item nav-link">Contato</a>
                     </div>
                     <a href="#" class="btn btn-primary rounded-pill text-white py-2 px-4 flex-wrap flex-sm-shrink-0">Register Now</a>
                 </div>
