--- a/training.html
+++ b/training.html
@@ -93,7 +93,7 @@
         <!-- Header End -->
 
         <!-- Banner Start -->
-        <div class="container-fluid bg-secondary wow zoomInDown" data-wow-delay="0.1s">
+        <div class="container-fluid bg-secondary wow zoomInDown d-none d-md-block" data-wow-delay="0.1s">
             <div class="container">
                 <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center text-center p-5">
                     <h1 class="me-4"><span class="fw-normal">Join us today for </span><span> your first dance</span></h1>
