organize 'about' mobile version

--- a/about.html
+++ b/about.html
@@ -115,13 +115,20 @@
                         </div>
                     </div>
                     <div class="col-lg-7 wow fadeInRight" data-wow-delay="0.3s">
-                        <h4 class="text-secondary sub-title fw-bold">about The Dance School</h4>
-                        <h1 class="display-3 mb-4"><strong class="text-primary">JustDance</strong>, We have been teaching dance since 2001</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint commodi alias, eius incidunt similique exercitationem magni quod recusandae maiores ducimus non porro neque odio explicabo, doloribus deleniti rem sequi adipisci sed ab qui dolorem. Optio sint eius illum consequuntur. Odit.
+                        <h4 class="text-secondary sub-title fw-bold">Sobre a escola</h4>
+                        <h1 class="display-3 mb-4"><strong class="text-primary">JustDance</strong>, Nós estamos lecionando desde 2001</h1>
+                        <p>Desde sua fundação, a escola tem sido 
+                            uma referência em Recife quando se trata de explorar o poder da expressão 
+                            corporal por meio da dança. Com uma variedade de modalidades disponíveis, 
+                            estamos comprometidos em proporcionar uma experiência enriquecedora e 
+                            transformadora para nossos alunos.
                         </p>
-                        <p class="mb-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore illum nemo deserunt reiciendis perferendis incidunt ullam expedita dolor, voluptas repellat necessitatibus dolore repellendus dolorum, voluptate dolorem. Debitis quis ipsa ullam neque corrupti maxime ad magni, tempore, aperiam rerum, perspiciatis fuga.
-                        </p>
-                        <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="#">Learn More</a>
+                        <ul>
+                            <li><i class="bi bi-check-circle"></i> <strong>Excelência no Ensino</strong> </li>
+                            <li><i class="bi bi-check-circle"></i> <strong>Ambiente Acolhedor e Inspirador</strong>  </li>
+                            <li><i class="bi bi-check-circle"></i>  <strong>Compromisso com a Arte e a Criatividade </strong>  </li>
+                          </ul>
+                        <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="#">Saiba mais</a>
                     </div>
                 </div>
             </div>
@@ -136,10 +143,10 @@
                     <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="counter">
                             <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
-                                <h3>Dance Classes</h3>
+                                <h3>ALunos</h3>
                             </div>
                             <div class="counter-content d-flex align-items-center justify-content-center mt-4">
-                                <span class="counter-value" data-toggle="counter-up">158</span>
+                                <span class="counter-value" data-toggle="counter-up">1000</span>
                                 <h4 class="text-secondary mb-0" style="font-weight: 600; font-size: 25px;">+</h4>
                             </div>
                         </div>
@@ -147,21 +154,21 @@
                     <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="counter">
                             <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
-                                <h3>Best Instructor</h3>
+                                <h3>Modalidades</h3>
                             </div>
                             <div class="counter-content d-flex align-items-center justify-content-center mt-4">
-                                <span class="counter-value" data-toggle="counter-up">49</span>
-                                <h4 class="text-secondary mb-0" style="font-weight: 600; font-size: 25px;">+</h4>
+                                <span class="counter-value" data-toggle="counter-up">6</span>
+                                
                             </div>
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="counter">
                             <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
-                                <h3>Total Brunch</h3>
+                                <h3>Competições</h3>
                             </div>
                             <div class="counter-content d-flex align-items-center justify-content-center mt-4">
-                                <span class="counter-value" data-toggle="counter-up">17</span>
+                                <span class="counter-value" data-toggle="counter-up">50</span>
                                 <h4 class="text-secondary mb-0" style="font-weight: 600; font-size: 25px;">+</h4>
                             </div>
                         </div>
@@ -169,10 +176,10 @@
                     <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
                         <div class="counter">
                             <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
-                                <h3>Happy customer</h3>
+                                <h3>Professores</h3>
                             </div>
                             <div class="counter-content d-flex align-items-center justify-content-center mt-4">
-                                <span class="counter-value" data-toggle="counter-up">567</span>
+                                <span class="counter-value" data-toggle="counter-up">6</span>
                                 <h4 class="text-secondary mb-0" style="font-weight: 600; font-size: 25px;">+</h4>
                             </div>
                         </div>
