--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                 <img src="img/carousel-1.jpg" class="img-fluid w-100" alt="Image">
                 <div class="carousel-caption">
                     <div class="carousel-caption-content p-3" style="max-width: 900px;">
-                        <h4 class="text-secondary text-uppercase sub-title fw-bold mb-4" style="letter-spacing: 3px;">Let's Dance</h4>
-                        <h1 class="display-1 text-capitalize text-white mb-4">Once A Dancer, Is Always A Dance</h1>
+                        <h4 class="text-secondary text-uppercase sub-title fw-bold mb-4" style="letter-spacing: 3px;">Vamos dançar</h4>
+                        <h1 class="display-1 text-capitalize text-white mb-4">Uma vez dançarino, sempre dançarino</h1>
                         <p class="fs-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                         </p>
                         <div class="pt-2">
@@ -116,8 +116,8 @@
                 <img src="img/carousel-1.jpg" class="img-fluid w-100" alt="Image">
                 <div class="carousel-caption">
                     <div class="carousel-caption-content p-3" style="max-width: 900px;">
-                        <h4 class="text-secondary text-uppercase sub-title fw-bold mb-4" style="letter-spacing: 3px;">Let's Dance</h4>
-                        <h1 class="display-1 text-capitalize text-white mb-4">Once A Dancer, Is Always A Dance</h1>
+                        <h4 class="text-secondary text-uppercase sub-title fw-bold mb-4" style="letter-spacing: 3px;">Vamos dançar</h4>
+                        <h1 class="display-1 text-capitalize text-white mb-4">Uma vez dançarino, sempre dançarino</h1>
                         <p class="fs-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                         </p>
                         <div class="pt-2">
@@ -151,8 +151,8 @@
                         </div>
                     </div>
                     <div class="col-lg-7 wow fadeInRight" data-wow-delay="0.3s">
-                        <h4 class="text-secondary sub-title fw-bold">about The Dance School</h4>
-                        <h1 class="display-3 mb-4"><strong class="text-primary">JustDance</strong>, We have been teaching dance since 2001</h1>
+                        <h4 class="text-secondary sub-title fw-bold">Sobre a escola</h4>
+                        <h1 class="display-3 mb-4"><strong class="text-primary">JustDance</strong>, Nós estamos lecionando desde 2001</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint commodi alias, eius incidunt similique exercitationem magni quod recusandae maiores ducimus non porro neque odio explicabo, doloribus deleniti rem sequi adipisci sed ab qui dolorem. Optio sint eius illum consequuntur. Odit.
                         </p>
                         <p class="mb-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore illum nemo deserunt reiciendis perferendis incidunt ullam expedita dolor, voluptas repellat necessitatibus dolore repellendus dolorum, voluptate dolorem. Debitis quis ipsa ullam neque corrupti maxime ad magni, tempore, aperiam rerum, perspiciatis fuga.
