organizing items only in mobile version

--- a/blog.html
+++ b/blog.html
@@ -83,7 +83,7 @@
         <div class="container-fluid bg-breadcrumb">
             <div class="container text-center py-5" style="max-width: 900px;">
                 <h3 class="text-primary display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">Our Blog & News</h1>
-                <ol class="breadcrumb justify-content-center text-white mb-0 wow fadeInDown" data-wow-delay="0.3s">
+                <ol class="breadcrumb justify-content-center text-white mb-0 wow fadeInDown d-none d-md-block" data-wow-delay="0.3s">
                     <li class="breadcrumb-item"><a href="index.html" class="text-dark">Home</a></li>
                     <li class="breadcrumb-item"><a href="#" class="text-dark">Pages</a></li>
                     <li class="breadcrumb-item active text-primary">Blogs</li>
@@ -174,7 +174,7 @@
 
 
         <!-- Counter Facts Start -->
-        <div class="container-fluid counter-facts py-5">
+        <div class="container-fluid counter-facts py-5 d-none d-md-block">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
@@ -228,7 +228,7 @@
 
 
         <!-- Training Start -->
-        <div class="container-fluid training py-5">
+        <div class="container-fluid training py-5 d-none d-md-block">
             <div class="container py-5">
                 <div class="pb-5">
                     <div class="row g-4 align-items-end">
