--- a/event.html
+++ b/event.html
@@ -80,10 +80,10 @@
         <!-- Navbar & Hero End -->
 
         <!-- Header Start -->
-        <div class="container-fluid bg-breadcrumb">
-            <div class="container text-center py-5" style="max-width: 900px;">
-                <h3 class="text-primary display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">Upcoming Events</h1>
-                <ol class="breadcrumb justify-content-center text-white mb-0 wow fadeInDown" data-wow-delay="0.3s">
+        <div class="container-fluid bg-breadcrumb ">
+            <div class="container text-center py-5 " style="max-width: 900px;">
+                <h3 class="text-primary display-3 mb-4 wow fadeInDown " data-wow-delay="0.1s"> Eventos</h1>
+                <ol class="breadcrumb justify-content-center text-white mb-0 wow fadeInDown d-none d-md-block" data-wow-delay="0.3s">
                     <li class="breadcrumb-item"><a href="index.html" class="text-dark">Home</a></li>
                     <li class="breadcrumb-item"><a href="#" class="text-dark">Pages</a></li>
                     <li class="breadcrumb-item active text-primary">Events</li>
@@ -109,11 +109,11 @@
                 <div class="pb-5">
                     <div class="row g-4 align-items-end">
                         <div class="col-xl-8">
-                            <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Events</h4>
-                            <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Upcoming Events</h1>
+                            <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Eventos</h4>
+                            <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Próximos espetáculos</h1>
                         </div>
                         <div class="col-xl-4 text-xl-end pb-3 wow fadeInUp" data-wow-delay="0.3s">
-                            <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="#">View All Events</a>
+                            <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="#">Ver todos</a>
                         </div>
                     </div>
                 </div>
@@ -193,7 +193,7 @@
 
 
         <!-- Counter Facts Start -->
-        <div class="container-fluid counter-facts py-5">
+        <div class="container-fluid counter-facts py-5 d-none d-md-block">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
@@ -247,7 +247,7 @@
 
 
         <!-- Video Gallery Start -->
-        <div class="container-fluid gallery py-5">
+        <div class="container-fluid gallery py-5 d-none d-md-block">
             <div class="container py-5">
                 <div class="pb-5">
                     <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Dance Gallery</h4>
