--- a/classes.html
+++ b/classes.html
@@ -83,7 +83,7 @@
         <div class="container-fluid bg-breadcrumb">
             <div class="container text-center py-5" style="max-width: 900px;">
                 <h3 class="text-primary display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">Modalidades</h1>
-                <ol class="breadcrumb justify-content-center text-white mb-0 wow fadeInDown" data-wow-delay="0.3s">
+                <ol class="breadcrumb justify-content-center text-white mb-0 wow fadeInDown d-none d-md-block" data-wow-delay="0.3s">
                     <li class="breadcrumb-item"><a href="index.html" class="text-dark">Home</a></li>
                     <li class="breadcrumb-item"><a href="#" class="text-dark">Pages</a></li>
                     <li class="breadcrumb-item active text-primary">Classes</li>
@@ -168,7 +168,7 @@
 
 
         <!-- Training Start -->
-        <div class="container-fluid training py-5">
+        <div class="container-fluid training py-5 d-none d-md-block">
             <div class="container py-5">
                 <div class="pb-5">
                     <div class="row g-4 align-items-end">
