--- a/training.html
+++ b/training.html
@@ -83,7 +83,7 @@
         <div class="container-fluid bg-breadcrumb">
             <div class="container text-center py-5" style="max-width: 900px;">
                 <h3 class="text-primary display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">Dance Training</h1>
-                <ol class="breadcrumb justify-content-center text-white mb-0 wow fadeInDown" data-wow-delay="0.3s">
+                <ol class="breadcrumb justify-content-center text-white mb-0 wow fadeInDown d-none d-md-block" data-wow-delay="0.3s">
                     <li class="breadcrumb-item"><a href="index.html" class="text-dark">Home</a></li>
                     <li class="breadcrumb-item"><a href="#" class="text-dark">Pages</a></li>
                     <li class="breadcrumb-item active text-primary">Training</li>
@@ -180,7 +180,7 @@
 
 
         <!-- Video Gallery Start -->
-        <div class="container-fluid gallery pb-5">
+        <div class="container-fluid gallery pb-5 d-none d-md-block">
             <div class="container pb-5">
                 <div class="pb-5">
                     <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Dance Gallery</h4>
