--- a/index.html
+++ b/index.html
@@ -28,6 +28,26 @@
 
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
+
+        <!-- manifest -->
+        <link rel="manifest" href="manifest.json">
+
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="application-name" content="Just Dance">
+        <meta name="apple-mobile-web-app-title" content="Just Dance">
+        <meta name="theme-color" content="#d63384">
+        <meta name="msapplication-navbutton-color" content="#d63384">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="msapplication-starturl" content="/">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <link rel="icon" type="image/jpg" sizes="1920x1920" href="img/carousel-1.jpg">
+        <link rel="apple-touch-icon" type="image/jpg" sizes="1920x1920" href="img/carousel-1.jpg">
+        
+
+
+
     </head>
 
     <body>
