organizing some stuff

--- a/classes.html
+++ b/classes.html
@@ -107,8 +107,8 @@
         <div class="container-fluid class bg-light py-5">
             <div class="container py-5">
                 <div class="pb-5">
-                    <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Our Dance Classes</h4>
-                    <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Dance Classes for everyone</h1>
+                    <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Modalidades</h4>
+                    <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Aulas para todos</h1>
                 </div>
                 <div class="class-carousel owl-carousel pt-5 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="class-item bg-white rounded wow fadeInUp" data-wow-delay="0.1s">
@@ -116,7 +116,7 @@
                             <img src="img/class-1.jpg" class="img-fluid rounded-top w-100" alt="Image">
                         </div>
                         <div class="rounded-bottom p-4">
-                            <a href="#" class="h4 mb-3 d-block">Classical Dance class</a>
+                            <a href="#" class="h4 mb-3 d-block">Ballet Clássico</a>
                             <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi blanditiis quidem</p>
                             <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Explore Details</a>
                         </div>
@@ -126,7 +126,7 @@
                             <img src="img/class-2.jpg" class="img-fluid rounded-top w-100" alt="Image">
                         </div>
                         <div class="rounded-bottom p-4">
-                            <a href="#" class="h4 mb-3 d-block">Classical Dance class</a>
+                            <a href="#" class="h4 mb-3 d-block">Jazz</a>
                             <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi blanditiis quidem</p>
                             <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Explore Details</a>
                         </div>
@@ -136,7 +136,7 @@
                             <img src="img/class-3.jpg" class="img-fluid rounded-top w-100" alt="Image">
                         </div>
                         <div class="rounded-bottom p-4">
-                            <a href="#" class="h4 mb-3 d-block">Classical Dance class</a>
+                            <a href="#" class="h4 mb-3 d-block">Dança Contemporânea</a>
                             <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi blanditiis quidem</p>
                             <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Explore Details</a>
                         </div>
@@ -146,7 +146,7 @@
                             <img src="img/class-2.jpg" class="img-fluid rounded-top w-100" alt="Image">
                         </div>
                         <div class="rounded-bottom p-4">
-                            <a href="#" class="h4 mb-3 d-block">Classical Dance class</a>
+                            <a href="#" class="h4 mb-3 d-block">Ginástica</a>
                             <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi blanditiis quidem</p>
                             <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Explore Details</a>
                         </div>
@@ -156,7 +156,7 @@
                             <img src="img/class-3.jpg" class="img-fluid rounded-top w-100" alt="Image">
                         </div>
                         <div class="rounded-bottom p-4">
-                            <a href="#" class="h4 mb-3 d-block">Classical Dance class</a>
+                            <a href="#" class="h4 mb-3 d-block">Street Dance</a>
                             <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi blanditiis quidem</p>
                             <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Explore Details</a>
                         </div>
