--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,7 @@
         <!-- Spinner Start -->
         <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
-                <span class="sr-only">Loading...</span>
+                <span class="sr-only">Carregando...</span>
             </div>
         </div>
         <!-- Spinner End -->
@@ -82,7 +82,7 @@
         <!-- Header Start -->
         <div class="container-fluid bg-breadcrumb">
             <div class="container text-center py-5" style="max-width: 900px;">
-                <h3 class="text-primary display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">Our Blog & News</h1>
+                <h3 class="text-primary display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">Blog & Notícias</h1>
                 <ol class="breadcrumb justify-content-center text-white mb-0 wow fadeInDown d-none d-md-block" data-wow-delay="0.3s">
                     <li class="breadcrumb-item"><a href="index.html" class="text-dark">Home</a></li>
                     <li class="breadcrumb-item"><a href="#" class="text-dark">Pages</a></li>
@@ -107,8 +107,8 @@
         <div class="container-fluid blog py-5">
             <div class="container py-5">
                 <div class="pb-5">
-                    <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Blog & News</h4>
-                    <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Our Latest News & Articles</h1>
+                    <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Blog & Notícias</h4>
+                    <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Nossas últimas atrações</h1>
                 </div>
                 <div class="blog-carousel owl-carousel pt-5 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="blog-item bg-white rounded wow fadeInUp" data-wow-delay="0.1s">
