--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
         <!-- Header Start -->
         <div class="container-fluid bg-breadcrumb">
             <div class="container text-center py-5" style="max-width: 900px;">
-                <h3 class="text-primary display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">Contact Us</h1>
+                <h3 class="text-primary display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">Contato</h1>
                 <ol class="breadcrumb justify-content-center text-white mb-0 wow fadeInDown d-none d-md-block" data-wow-delay="0.3s">
                     <li class="breadcrumb-item"><a href="index.html" class="text-dark">Home</a></li>
                     <li class="breadcrumb-item"><a href="#" class="text-dark">Pages</a></li>
@@ -107,8 +107,8 @@
         <div class="container-fluid contact py-5">
             <div class="container py-5">
                 <div class="pb-5">
-                    <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Contact Us</h4>
-                    <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Get In Touch</h1>
+                    <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Contato</h4>
+                    <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Fale conosco</h1>
                 </div>
                 <div class="bg-light rounded p-4 pb-0">
                     <div class="row g-5 align-items-center">
@@ -120,41 +120,41 @@
                                     <div class="col-lg-12 col-xl-6">
                                         <div class="form-floating">
                                             <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                            <label for="name">Your Name</label>
+                                            <label for="name">Seu nome</label>
                                         </div>
                                     </div>
                                     <div class="col-lg-12 col-xl-6">
                                         <div class="form-floating">
                                             <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                            <label for="email">Your Email</label>
+                                            <label for="email">Seu email</label>
                                         </div>
                                     </div>
                                     <div class="col-lg-12 col-xl-6">
                                         <div class="form-floating">
                                             <input type="phone" class="form-control" id="phone" placeholder="Phone">
-                                            <label for="phone">Your Phone</label>
+                                            <label for="phone">Seu telefone</label>
                                         </div>
                                     </div>
                                     <div class="col-lg-12 col-xl-6">
                                         <div class="form-floating">
                                             <input type="text" class="form-control" id="project" placeholder="Project">
-                                            <label for="project">Your Project</label>
+                                            <label for="project">Seu projeto</label>
                                         </div>
                                     </div>
                                     <div class="col-12">
                                         <div class="form-floating">
                                             <input type="text" class="form-control" id="subject" placeholder="Subject">
-                                            <label for="subject">Subject</label>
+                                            <label for="subject">Assunto</label>
                                         </div>
                                     </div>
                                     <div class="col-12">
                                         <div class="form-floating">
                                             <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 160px"></textarea>
-                                            <label for="message">Message</label>
+                                            <label for="message">Mensagem</label>
                                         </div>
                                     </div>
                                     <div class="col-12">
-                                        <button class="btn btn-primary w-100 py-3">Send Message</button>
+                                        <button class="btn btn-primary w-100 py-3">Envie</button>
                                     </div>
                                 </div>
                             </form>
@@ -163,22 +163,22 @@
                             <div class="d-flex align-items-center mb-5">
                                 <div class="mb-3"><i class="fa fa-home fa-2x text-primary"></i></div>
                                 <div class="ms-4">
-                                    <h4>Addresses</h4>
-                                    <p class="mb-0">123 ranking Street, New York, USA</p>
+                                    <h4>Endereço</h4>
+                                    <p class="mb-0">Av. Dr. Cláudio José Gueiros Leite, 5284 - Pau Amarelo, Paulista - PE, 53431-165</p>
                                 </div>
                             </div>
                             <div class="d-flex align-items-center mb-5">
                                 <div class="mb-3"><i class="fa fa-map-marker-alt fa-2x text-primary"></i></div>
                                 <div class="ms-4">
-                                    <h4>Addresses</h4>
+                                    <h4>Endereço</h4>
                                     <p class="mb-0">123 ranking Street, New York, USA</p>
                                 </div>
                             </div>
                             <div class="d-flex align-items-center mb-5">
                                 <div class="mb-3"><i class="fa fa-phone-alt fa-2x text-primary"></i></div>
                                 <div class="ms-4">
-                                    <h4>Mobile</h4>
-                                    <p class="mb-0">+012 345 67890</p>
+                                    <h4>Telefone</h4>
+                                    <p class="mb-0">81 99999-4444</p>
                                     <p class="mb-0">+012 345 67890</p>
                                 </div>
                             </div>
@@ -186,7 +186,7 @@
                                 <div class="mb-3"><i class="fa fa-envelope-open fa-2x text-primary"></i></div>
                                 <div class="ms-4">
                                     <h4>Email</h4>
-                                    <p class="mb-0">info@example.com</p>
+                                    <p class="mb-0">justdancecontato@gmail.com.com</p>
                                     <p class="mb-0">info@example.com</p>
                                 </div>
                             </div>
