--- a/gallery.html
+++ b/gallery.html
@@ -82,7 +82,7 @@
         <!-- Header Start -->
         <div class="container-fluid bg-breadcrumb">
             <div class="container text-center py-5" style="max-width: 900px;">
-                <h3 class="text-primary display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">Dance Class Gallery</h1>
+                <h3 class="text-primary display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">Galeria</h1>
                 <ol class="breadcrumb justify-content-center text-white mb-0 wow fadeInDown d-none d-md-block" data-wow-delay="0.3s">
                     <li class="breadcrumb-item"><a href="index.html" class="text-dark">Home</a></li>
                     <li class="breadcrumb-item"><a href="#" class="text-dark">Pages</a></li>
@@ -107,8 +107,8 @@
         <div class="container-fluid gallery py-5">
             <div class="container py-5">
                 <div class="pb-5">
-                    <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Dance Gallery</h4>
-                    <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Our Dance class gallery</h1>
+                    <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Galeria</h4>
+                    <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Nossa dança através das fotos</h1>
                 </div>
                 <div class="tab-class wow fadeInUp" data-wow-delay="0.1s">
                     <ul class="nav nav-pills d-inline-flex justify-content-center pb-4">
