change old teachers pic

--- a/classes.html
+++ b/classes.html
@@ -120,7 +120,7 @@
                         </div>
                         <div class="rounded-bottom p-4">
                             <a href="#" class="h4 mb-3 d-block">Ballet Clássico</a>
-                            <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi blanditiis quidem</p>
+                            <p class="mb-3">Encante-se com a elegância e a precisão dos movimentos clássicos do ballet, uma expressão artística que combina graça e técnica em harmonia</p>
                             <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Explore Details</a>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                         </div>
                         <div class="rounded-bottom p-4">
                             <a href="#" class="h4 mb-3 d-block">Jazz</a>
-                            <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi blanditiis quidem</p>
+                            <p class="mb-3">Liberte-se com a energia vibrante do jazz, uma modalidade que combina ritmo, improvisação e expressão corporal em uma fusão única de estilos</p>
                             <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Explore Details</a>
                         </div>
                     </div>
@@ -140,7 +140,7 @@
                         </div>
                         <div class="rounded-bottom p-4">
                             <a href="#" class="h4 mb-3 d-block">Dança Contemporânea</a>
-                            <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi blanditiis quidem</p>
+                            <p class="mb-3">Explore a criatividade e a expressão pessoal na dança contemporânea, onde movimentos fluidos e interpretação emocional se fundem em performances envolventes e inovadoras</p>
                             <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Explore Details</a>
                         </div>
                     </div>
@@ -150,7 +150,7 @@
                         </div>
                         <div class="rounded-bottom p-4">
                             <a href="#" class="h4 mb-3 d-block">Ginástica</a>
-                            <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi blanditiis quidem</p>
+                            <p class="mb-3">Desenvolva força, flexibilidade e coordenação através da ginástica, uma prática que combina técnica, disciplina e graciosidade em movimentos desafiadores e cativantes</p>
                             <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Explore Details</a>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                         </div>
                         <div class="rounded-bottom p-4">
                             <a href="#" class="h4 mb-3 d-block">Street Dance</a>
-                            <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi blanditiis quidem</p>
+                            <p class="mb-3">Entre no ritmo pulsante da cultura urbana, uma forma de expressão que combina elementos de dança, música e estilo próprio para criar performances vibrantes e cheias de energia</p>
                             <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Explore Details</a>
                         </div>
                     </div>
