--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 </div>
             </div>
             <div class="header-carousel-item">
-                <img src="img/carousel-1.jpg" class="img-fluid w-100" alt="Image">
+                <img src="img/dancaContemp2.jpg" class="img-fluid w-100" alt="Image">
                 <div class="carousel-caption">
                     <div class="carousel-caption-content p-3" style="max-width: 900px;">
                         <h4 class="text-secondary text-uppercase sub-title fw-bold mb-4" style="letter-spacing: 3px;">Vamos dançar</h4>
@@ -143,7 +143,7 @@
                 </div>
             </div>
             <div class="header-carousel-item">
-                <img src="img/carousel-1.jpg" class="img-fluid w-100" alt="Image">
+                <img src="img/jazz4.jpg" class="img-fluid w-100" alt="Image">
                 <div class="carousel-caption">
                     <div class="carousel-caption-content p-3" style="max-width: 900px;">
                         <h4 class="text-secondary text-uppercase sub-title fw-bold mb-4" style="letter-spacing: 3px;">Vamos dançar</h4>
