--- a/team.html
+++ b/team.html
@@ -116,7 +116,7 @@
                 <div class="team-carousel owl-carousel pt-5 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item border rounded wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-img bg-secondary rounded-top">
-                            <img src="img/team-1.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            <img src="img/prof jazz 2.jpg" class="img-fluid rounded-top w-100" alt="Image">
                             <div class="team-icon">
                                 <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
@@ -131,7 +131,7 @@
                     </div>
                     <div class="team-item border rounded wow fadeInUp" data-wow-delay="0.3s">
                         <div class="team-img bg-secondary rounded-top">
-                            <img src="img/team-2.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            <img src="img/profpic.jpg" class="img-fluid rounded-top w-100" alt="Image">
                             <div class="team-icon">
                                 <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
@@ -146,7 +146,7 @@
                     </div>
                     <div class="team-item border rounded wow fadeInUp" data-wow-delay="0.5s">
                         <div class="team-img bg-secondary rounded-top">
-                            <img src="img/team-3.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            <img src="img/prof 4 sd.jpg" class="img-fluid rounded-top w-100" alt="Image">
                             <div class="team-icon">
                                 <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
@@ -161,7 +161,7 @@
                     </div>
                     <div class="team-item border rounded wow fadeInUp" data-wow-delay="0.7s">
                         <div class="team-img bg-secondary rounded-top">
-                            <img src="img/team-4.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            <img src="img/prof ballet 1 (1).jpg" class="img-fluid rounded-top w-100" alt="Image">
                             <div class="team-icon">
                                 <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
@@ -176,7 +176,7 @@
                     </div>
                     <div class="team-item border rounded wow fadeInUp" data-wow-delay="0.9s">
                         <div class="team-img bg-secondary rounded-top">
-                            <img src="img/team-4.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            <img src="img/prof dc 6.jpg" class="img-fluid rounded-top w-100" alt="Image">
                             <div class="team-icon">
                                 <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square btn-primary rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
